// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PullQuote does not render author if not provided 1`] = `
<section
  class="cita-autor flex flex-column gap-16 flex-nowrap w-100 px-16 py-24"
  data-testid="pullquote"
>
  <div
    class="cita-content border border-left border-1-5 border-neutral-light-800 container-center-100"
  >
    <div
      class="title-cita flex gap-8 pl-8 pb-16"
    >
      <i
        class="icon --icon-24"
      >
        <mock-icon
          name="quote"
        />
      </i>
      <p
        class="text ln-text prumo prumo-extra --prumo-italic text-24 --prumo --font-bold"
      >
        <span>
          Texto de la cita
        </span>
        ”
      </p>
    </div>
  </div>
</section>
`;

exports[`PullQuote renders correctly and matches snapshot 1`] = `
<section
  class="cita-autor flex flex-column gap-16 flex-nowrap w-100 px-16 py-24"
  data-testid="pullquote"
>
  <div
    class="cita-content border border-left border-1-5 border-neutral-light-800 container-center-100"
  >
    <div
      class="title-cita flex gap-8 pl-8 pb-16"
    >
      <i
        class="icon --icon-24"
      >
        <mock-icon
          name="quote"
        />
      </i>
      <p
        class="text ln-text prumo prumo-extra --prumo-italic text-24 --prumo --font-bold"
      >
        <span>
          Texto de la cita
        </span>
        ”
      </p>
    </div>
    <h3
      class="text ln-text text-14 pl-40 --arial"
    >
      — 
      Autor Ejemplo
    </h3>
  </div>
</section>
`;
